# mas-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.override.yaml  docker-compose.smoke.yaml  docker-compose.yaml  pyproject.toml  ruff.toml  start.bat  stop.bat
.plan/: claw_design_notes.md  hooks_design_notes.md  permission_design_notes.md  progress.md  skill_design_notes.md
agents/: analyzer.md  assistant.md  clawbot.md  coordinator.md  exam_generator.md  exam_reviewer.md  general.md  parser.md  researcher.md  reviewer.md  writer.md
config/: pricing.yaml  settings.local.yaml.example  settings.yaml
deploy/: prometheus.yml
docs/: benchmarks.html  benchmarks.md  deployment.md
pipelines/: blog_generation.yaml  blog_with_review.yaml  courseware_exam.yaml  test_linear.yaml  test_parallel.yaml
scripts/: conftest.py  init_db.sql  migrate_embedding_dim.py  seed.sh  smoke_settings_shadow.yaml  start.sh  test_agent_loop.py  test_anthropic_adapter.py  test_bench_queries.py  test_blog_generation_smoke.py  test_blog_pipeline.py  test_build_graph.py  test_bus_session_runner_integration.py  test_claw_base_channel.py  test_claw_bus.py  test_claw_channel_manager.py  test_claw_discord.py  test_claw_gateway.py  test_claw_message.py  test_claw_qq.py  test_claw_session.py  test_claw_wechat.py  test_compact.py  test_compact_resume.py  test_conditional_routing.py  test_context_builder.py  test_coordinator.py  test_coordinator_loop.py  test_coordinator_split.py  test_courseware_empty_input.py  test_courseware_pipeline.py  (+99 more)
(+554 files in other folders)
