[project]
name = "mas-pipeline"
version = "0.1.0"
description = "A configurable Multi-Agent System engine for content production pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # HTTP client
    "httpx>=0.27",
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # Redis
    "redis[hiredis]>=5.2",
    # Data validation
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # YAML
    "pyyaml>=6.0",
    # CLI output
    "rich>=13.9",
    # File upload
    "python-multipart>=0.0.18",
    # WebSocket
    "websockets>=14.0",
    # Workflow orchestration
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    # Document parsing
    "pymupdf>=1.25",
    "pymupdf4llm>=0.0.17",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    # Token counting
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
